Fixed the flip. By default, the container will have a regular grey border and the inner card will have a green colored border. If the parent which can also get the class 'flipped' will have the class 'wrong', the cards will have the red border.
Currently there is a layout issue when it's resized to smaller resolutions. Seems like there is an issue with the winstrap dropdowns, they don't like the responsive grids...

--- a/Tamil.Grammar.Prosody.Parser.WebUI/Content/winstrap/src/scss/override/_fame.scss
+++ b/Tamil.Grammar.Prosody.Parser.WebUI/Content/winstrap/src/scss/override/_fame.scss
@@ -96,6 +96,7 @@ $thavaru: $color-darkred;
 
 /* simple */
 .flip-container_click {
+    height: 427px;
     -webkit-perspective: 1000;
     -moz-perspective: 1000;
     -ms-perspective: 1000;
@@ -106,7 +107,18 @@ $thavaru: $color-darkred;
         -moz-transform-style: preserve-3d;
         -ms-transform-style: preserve-3d;
 
-    border: 1px solid $color-green;
+    border: 1px solid $shame_bordercol;
+
+    .front, .back{
+        border: 1px solid $color-green;
+    }
+
+    &.wrong{
+        .front, .back{
+            border: 1px solid $color-red;
+        }
+
+    }
 }
 
 /*
@@ -138,12 +150,8 @@ $thavaru: $color-darkred;
 
 /* END: Accommodating for IE */
 
-.flip-container, .front, .back {
-	width: 320px;
-	height: 427px;
-}
-
 .flipper {
+    height: 100%;
 	-webkit-transition: 0.6s;
 	-webkit-transform-style: preserve-3d;
 	-ms-transition: 0.6s;
@@ -160,6 +168,7 @@ $thavaru: $color-darkred;
 }
 
 .front, .back {
+    padding: 10px 20px;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
@@ -186,19 +195,21 @@ $thavaru: $color-darkred;
 	transform: rotateY(0deg);
 
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: -1px;
+	left: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 1px solid red;
 }
 
 .front {
 	-webkit-transform: rotateY(0deg);
 	-ms-transform: rotateY(0deg);
-	background: white;
 	z-index: 2;
+    overflow: auto;
 }
 
 .back {
-	background: lightblue;
 	-webkit-transform: rotateY(-180deg);
 	-moz-transform: rotateY(-180deg);
 	-o-transform: rotateY(-180deg);
